<resources>
    <string name="app_name">Group Tours USA</string>
    <string name="addContactName">Name</string>
    <string name="addContactPhone">123-456-7890</string>
    <string name="addContactButton">Add</string>
    <string name="nameHintText">John Doe</string>
    <string name="phoneHintText">1234567890</string>
    <string name="checkInButtonText">Check In</string>
    <string name="resetButtonText">Reset</string>
    <string name="clearButtonText">Clear Status</string>
    <string name="saveButtonText">Save</string>
    <string name="deleteButtonText">Delete</string>
    <string name="scrollableEntryText">Scrollable Names</string>
    <string name="notesMultiLineText">Notes</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="confirm_reset">Are you sure you want to reset check-in status?</string>
    <string name="confirm_clear_database">Are you sure you want to delete everything?</string>
    <string name="confirm">Confirm</string>
    <string name="callBtnText">Call</string>
    <string name="textBtnText">Text</string>
    <string name="advancedBtnText">Advanced Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>